crates/ic-lint/tests/snapshots/range_bound__char_exceeds_max_bounds.snap
---
source: crates/ic-lint/tests/range_bound.rs
expression: test_lint_hir(source)
---
warning[range-bound]: @max value 200 exceeds type maximum 127
   ┌ test.idl:4:10
   │
 2 │ module MyModule {
 3 │     struct BadChar {
 4 │         @max(200) char value;  // char max is 127 (ASCII)
   ·          ^^^ value out of bounds
 5 │     };
 6 │ };
   └──
 help: valid range is 0..127
