crates/ic-lint/tests/snapshots/range_bound__empty_range.snap
---
source: crates/ic-lint/tests/range_bound.rs
expression: test_lint_hir(source)
---
warning[range_bound]: @range annotation requires at least one of min or max
   ┌ test.idl:4:10
   │
 4 │         @range() long value;
   ·          ^^^^^ empty range
   └──
 help: specify either min=value, max=value, or both
