crates/ic-lint/tests/snapshots/range_bound__inverted_min_max.snap
---
source: crates/ic-lint/tests/range_bound.rs
expression: test_lint_hir(source)
---
⨯ range-bound: @min value (100) is greater than @max value (50)
  @ test.idl:4:10

 2 │ module MyModule {
 3 │     struct BadMinMax {
 4 │         @min(100) @max(50) long value;
   │          ˆˆˆ       ˆˆˆ max value here
   │          └─ min value here
 5 │     };
 6 │ };

  ? ensure @min is less than or equal to @max
