crates/ic-lint/tests/snapshots/range_bound__malformed_min.snap
---
source: crates/ic-lint/tests/range_bound.rs
expression: test_lint_hir(source)
---
⨯ range-bound: @min value must be an integer
  @ test.idl:4:14

 2 │ module MyModule {
 3 │     struct MalformedMin {
 4 │         @min("not a number") long value;
   │              ˆˆˆˆˆˆˆˆˆˆˆˆˆˆ must be an integer
 5 │     };
 6 │ };
