crates/ic-lint/tests/snapshots/range_bound__malformed_range.snap
---
source: crates/ic-lint/tests/range_bound.rs
expression: test_lint_hir(source)
---
⨯ range-bound: @range argument 'min' must be an integer
  @ test.idl:4:16

 2 │ module MyModule {
 3 │     struct MalformedRange {
 4 │         @range(min="not a number") long value;
   │                ˆˆˆ must be an integer
 5 │     };
 6 │ };

⨯: missing required annotation parameter `max`
  @ test.idl:4:10

 2 │ module MyModule {
 3 │     struct MalformedRange {
 4 │         @range(min="not a number") long value;
   │          ˆˆˆˆˆ annotation parameter missing
 5 │     };
 6 │ };
