crates/ic-lint/tests/snapshots/range_bound__max_exceeds_type_bounds.snap
---
source: crates/ic-lint/tests/range_bound.rs
expression: test_lint_hir(source)
---
⨯ range-bound: @max value 299 exceeds type maximum 255
  @ test.idl:4:10

 2 │ module MyModule {
 3 │     struct BadMax {
 4 │         @max(299) octet value;
   │          ˆˆˆ value out of bounds
 5 │     };
 6 │ };

  ? valid range is 0..255
